Fix childhood text 2 overlapping into next section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,8 @@ main {
 #childhood-container {
     position: relative;
     width: 100vw;
-    height: 100vh;
+    height: 110vh;
+    min-height: 776px;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
